# ComfyUI-AutoCropFaces

./: .gitignore  README.md  __init__.py  pyproject.toml  test.py
Pytorch_Retinaface/: pytorch_retinaface.py
Pytorch_Retinaface/models/: retinaface.py
tests/: AutoCropFaces-Testing.json
